--- a/qatar-expo-hackathon.html
+++ b/qatar-expo-hackathon.html
@@ -1,15 +1,69 @@
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hackathon 2026 | QELE & Lovable Vibe Coding Challenge</title>
+    <meta name="description" content="Join the Hackathon 2026 at the Qatar Education Expo. A 24-hour innovation challenge presented by Qatar Education Expo & Lovable to inspire the next generation of problem solvers.">
+    <title>Hackathon 2026 | Qatar Education Expo & Lovable Vibe Coding Challenge</title>
+    <link rel="canonical" href="https://eduexpoqatar.com/qatar-expo-hackathon.html" />
+    <link rel="alternate" hreflang="en" href="https://eduexpoqatar.com/qatar-expo-hackathon.html" />
+    <link rel="alternate" hreflang="en-QA" href="https://eduexpoqatar.com/qatar-expo-hackathon.html" />
+    <link rel="alternate" hreflang="en-SA" href="https://eduexpoqatar.com/qatar-expo-hackathon.html" />
+    <link rel="alternate" hreflang="en-AE" href="https://eduexpoqatar.com/qatar-expo-hackathon.html" />
+    <link rel="alternate" hreflang="en-KW" href="https://eduexpoqatar.com/qatar-expo-hackathon.html" />
+    <link rel="alternate" hreflang="en-BH" href="https://eduexpoqatar.com/qatar-expo-hackathon.html" />
+    <link rel="alternate" hreflang="en-OM" href="https://eduexpoqatar.com/qatar-expo-hackathon.html" />
+    <link rel="alternate" hreflang="en-GB" href="https://eduexpoqatar.com/qatar-expo-hackathon.html" />
+    <link rel="alternate" hreflang="en-CA" href="https://eduexpoqatar.com/qatar-expo-hackathon.html" />
+    <link rel="alternate" hreflang="en-US" href="https://eduexpoqatar.com/qatar-expo-hackathon.html" />
+    <link rel="alternate" hreflang="x-default" href="https://eduexpoqatar.com/qatar-expo-hackathon.html" />
     <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;800&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+    <script type="application/ld+json">
+    [
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "Qatar Education Expo 2026",
+        "url": "/index.html",
+        "logo": "https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.png",
+        "sameAs": [
+          "https://twitter.com/qatarexpo2026",
+          "https://linkedin.com/company/qatarexpo2026",
+          "https://instagram.com/qatarexpo2026"
+        ],
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "telephone": "+974-7444-9111",
+          "contactType": "Customer Service",
+          "email": "partnerships@eduexpoqatar.com"
+        }
+      },
+      {
+        "@context": "https://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [{
+          "@type": "ListItem",
+          "position": 1,
+          "name": "Home",
+          "item": "/index.html"
+        },{
+          "@type": "ListItem",
+          "position": 2,
+          "name": "For Students",
+          "item": "/student-registration.html"
+        },{
+          "@type": "ListItem",
+          "position": 3,
+          "name": "Hackathon 2026"
+        }]
+      }
+    ]
+    </script>
     <style>
         .hackathon-partners {
             padding: 80px 0;
@@ -72,7 +126,7 @@
 
     <header class="main-header" id="main-header">
         <div class="container">
-            <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.png" alt="QELE 2026 Logo"></a>
+            <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.png" alt="Qatar Education Expo 2026 Logo"></a>
             <button class="nav-toggle" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="hamburger-box">
                     <span class="hamburger-inner"></span>
@@ -126,88 +180,38 @@
 
     <main>
         <section class="page-header" style="padding: 0;">
-            <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762189182/X_1500_x_692_px_1500_x_250_px_1000_x_250_px_txz9vn.png" alt="lovable x Qatar Education Leadership Expo 2026 Hackathon" style="width: 55%; margin-left: 325px; display: block;">
+            <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762189182/X_1500_x_692_px_1500_x_250_px_1000_x_250_px_txz9vn.png" alt="lovable x Qatar Education Expo 2026 Hackathon" style="width: 55%; margin-left: 325px; display: block;">
         </section>
 
         <section id="hackathon-intro">
             <div class="container" style="max-width: 900px; text-align: center; position: relative;">
-                <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762163971/Untitled_design_-_2025-11-03T152918.441_c0m9ka.png" alt="QELE's owl mascot holding a coding laptop, representing the Hackathon event." class="hackathon-intro-mascot">
+                <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762163971/Untitled_design_-_2025-11-03T152918.441_c0m9ka.png" alt="Qatar Education Expo's owl mascot holding a coding laptop, representing the Hackathon event." class="hackathon-intro-mascot">
                 <i class="fas fa-code" style="font-size: 3rem; background: var(--gradient); -webkit-background-clip: text; -webkit-text-fill-color: transparent; margin-bottom: 1rem;"></i>
                 <h2>Join a 24-Hour Innovation Hackathon</h2>
-                <p class="subtitle" style="font-size: 1.1rem;">In collaboration with lovable, the Qatar Education Leadership Expo 2026 proudly presents the Vibe Coding Challenge a 24-hour innovation hackathon designed to inspire the next generation of creative problem solvers. This challenge invites students across Qatar to reimagine the university experience of tomorrow using the power of AI, design thinking, and digital tools</p>
-                <a href="student-registration.html" class="btn btn-primary">Register to Participate</a>
+                <p class="subtitle" style="font-size: 1.1rem;">In collaboration with lovable, the Qatar Education Expo 2026 proudly presents the Vibe Coding Challenge a 24-hour innovation hackathon designed to inspire the next generation of problem solvers. Grade 11-12 students are invited to team up, ideate, and build solutions that address real-world challenges in education.</p>
+                 <a href="student-registration.html" class="btn btn-primary">Register for the Hackathon</a>
             </div>
         </section>
 
-        <section id="awards-recognition">
-             <div class="container">
-                <h2><i class="fas fa-trophy" style="color: #d12386;"></i> Awards & Recognition</h2>
-                <p class="subtitle">Impress the judges and win incredible prizes to kickstart your academic and professional journey.</p>
-                <div class="benefits-grid">
-                    <div class="benefit-card">
-                        <i class="fas fa-medal"></i>
-                        <h3>Prizes for Winners</h3>
-                        <p>Win scholarships or tuition discounts sponsored by partner universities, receive Certificates of Excellence, and gain recognition at the Expo.</p>
-                    </div>
-                    <div class="benefit-card">
-                        <i class="fas fa-gavel"></i>
-                        <h3>Judging Criteria</h3>
-                        <p>Teams will be judged on Creativity & Innovation, Empathy & Real-world Impact, Global Relevance, and Pitch Presentation.</p>
-                    </div>
-                    <div class="benefit-card">
-                        <i class="fas fa-handshake"></i>
-                        <h3>Unmatched Exposure</h3>
-                        <p>Get exposure to investors, mentors, and global education leaders who can help turn your idea into reality.</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section id="hackathon-schedule" class="bg-surface">
-            <div class="container">
-                <h2><i class="far fa-calendar-alt" style="color: #d12386;"></i> Event Schedule</h2>
-                <p class="subtitle">A packed 2-day agenda of learning, building, and pitching.</p>
-                 <div class="agenda-container" style="max-width: 800px;">
-                    <div class="agenda-timeline">
-                        <div class="timeline-block">
-                            <div class="timeline-time"><h3>Day 1<br><span>Build & Inspire</span></h3></div>
-                            <div class="timeline-events">
-                                <div class="session-card"><div class="session-icon"><i class="fas fa-rocket"></i></div><div class="session-content"><h4>Kickoff Workshop</h4><p>Introduction to AI, design thinking, and the challenge tools.</p></div></div>
-                                <div class="session-card"><div class="session-icon"><i class="fas fa-user-friends"></i></div><div class="session-content"><h4>Mentorship Sessions</h4><p>Get feedback and guidance from education and tech experts.</p></div></div>
-                                <div class="session-card"><div class="session-icon"><i class="fas fa-laptop-code"></i></div><div class="session-content"><h4>24-Hour Innovation Sprint</h4><p>Work with your team to bring your idea to life.</p></div></div>
-                            </div>
-                        </div>
-                        <div class="timeline-block">
-                            <div class="timeline-time"><h3>Day 2<br><span>Pitch & Celebrate</span></h3></div>
-                            <div class="timeline-events">
-                                <div class="session-card"><div class="session-icon"><i class="fas fa-microphone-alt"></i></div><div class="session-content"><h4>Final Presentations</h4><p>Pitch your solution to our panel of esteemed judges.</p></div></div>
-                                <div class="session-card award"><div class="session-icon"><i class="fas fa-trophy"></i></div><div class="session-content"><h4>Awards Ceremony</h4><p>Celebrate the winners and see the best innovations showcased.</p></div></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        
         <section class="hackathon-partners">
             <div class="container">
-                 <h2>Our Partners</h2>
-                 <p class="subtitle">This event is made possible by the collaborative efforts of leaders in education and technology.</p>
+                <h2>Our Hackathon Partners</h2>
+                <p class="subtitle">Powered by industry leaders dedicated to fostering innovation.</p>
                 <div class="partners-grid">
                     <div class="partner-card">
-                        <h4>Hosted By</h4>
-                        <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762105728/NB.hiloop.official.logo_1_wwcxzh.png" alt="Hi Loop Logo" class="hiloop-logo">
-                        <p><strong>Hi Loop:</strong> A global community fostering learning-by-doing through coding clubs, workshops, and hackathons for young innovators to develop new skills and build impactful projects.</p>
+                        <h4>Organized by</h4>
+                        <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.png" alt="Qatar Education Expo 2026 Logo">
+                        <p>The Qatar Education Expo is the premier platform connecting educational leaders, innovators, and students in the MENA region, fostering collaboration and shaping the future of learning.</p>
                     </div>
-                    <div class="partner-card">
-                        <h4>An Initiative By</h4>
+                     <div class="partner-card">
+                        <h4>In Collaboration With</h4>
                         <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762148595/Untitled_design_-_2025-11-03T111231.113_eejcdu.png" alt="Lovable Logo">
-                        <p><strong>Lovable:</strong> An AI-driven no-code development platform that empowers educators and learners to create interactive learning tools, apps and websites, making tech-creation accessible regardless of coding background.</p>
+                        <p>Lovable is an on-demand service app that connects students with tutors. The platform allows parents to find pre-vetted, qualified tutors in their area for in-person or online sessions across any subject.</p>
                     </div>
-                    <div class="partner-card">
-                        <h4>In Partnership With</h4>
-                        <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.png" alt="Qatar Education Leadership Expo 2026 Logo">
-                        <p><strong>QELE 2026:</strong> The premier event connecting educational leaders, institutions, and innovators in the MENA region to shape the future of education.</p>
+                     <div class="partner-card">
+                        <h4>Technology Partner</h4>
+                        <img class="hiloop-logo" src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762105728/NB.hiloop.official.logo_1_wwcxzh.png" alt="Hi Loop Logo">
+                        <p>Hi-Loop is a smart business card solution that helps professionals and businesses network more efficiently. Hi-Loop replaces traditional paper business cards with a single smart card, enabling instant and sustainable connections.</p>
                     </div>
                 </div>
             </div>
@@ -219,7 +223,7 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-col">
-                    <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761223357/logo-white_1_pqcaph.png" alt="QELE 2026 Logo"></a>
+                    <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761223357/logo-white_1_pqcaph.png" alt="Qatar Education Expo 2026 Logo"></a>
                     <p>The premier event connecting educational leaders, institutions, and innovators in the MENA region.</p>
                 </div>
                 <div class="footer-col">
@@ -264,70 +268,17 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 QELE. All Rights Reserved.</p>
+                <p>&copy; 2024 Qatar Education Expo. All Rights Reserved.</p>
             </div>
         </div>
     </footer>
 
+    <!-- WhatsApp Chat -->
     <a href="https://wa.me/97474449111" class="whatsapp-fab" target="_blank" aria-label="Chat on WhatsApp">
         <i class="fab fa-whatsapp"></i>
     </a>
-
-    <div id="exit-intent-modal" class="modal-overlay">
-        <div class="modal-content exit-intent-content" role="dialog" aria-modal="true" aria-labelledby="exit-modal-title">
-            <button class="modal-close-btn" aria-label="Close">&times;</button>
-            <h3 id="exit-modal-title">Download The Deck Before You Leave!</h3>
-            <p>Get our official Exhibitor & Sponsorship Deck, including the floor plan and ROI details, sent straight to your inbox.</p>
-            <button id="open-deck-form-btn" class="btn btn-primary">Get The Deck</button>
-        </div>
-    </div>
-
-    <div id="deck-request-modal" class="modal-overlay">
-        <div class="modal-content" role="dialog" aria-modal="true" aria-labelledby="deck-modal-title">
-            <button class="modal-close-btn" aria-label="Close">&times;</button>
-            <div id="deck-form-container">
-                <h3 id="deck-modal-title">Get The Official Deck</h3>
-                <p>Please provide your details to receive the Exhibitor & Sponsorship Deck instantly.</p>
-                <form id="deck-request-form" novalidate style="margin-top: 1.5rem;">
-                    <input type="hidden" name="form_source" value="Deck Request Popup">
-                    <div class="form-group">
-                        <label for="deck-form-name">Full Name *</label>
-                        <input type="text" id="deck-form-name" name="name" required>
-                        <div class="error-message"></div>
-                    </div>
-                    <div class="form-group">
-                        <label for="deck-form-email">Work Email *</label>
-                        <input type="email" id="deck-form-email" name="email" required>
-                        <div class="error-message"></div>
-                    </div>
-                     <div class="form-group">
-                        <label for="deck-form-phone">Mobile Number *</label>
-                        <input type="tel" id="deck-form-phone" name="phone" required>
-                        <div class="error-message"></div>
-                    </div>
-                    <div class="form-row">
-                        <div class="form-group">
-                            <label for="deck-form-designation">Designation *</label>
-                            <input type="text" id="deck-form-designation" name="designation" required>
-                            <div class="error-message"></div>
-                        </div>
-                        <div class="form-group">
-                            <label for="deck-form-organization">Organization *</label>
-                            <input type="text" id="deck-form-organization" name="organization" required>
-                            <div class="error-message"></div>
-                        </div>
-                    </div>
-                    <button type="submit" class="btn btn-primary" style="width: 100%;">Download Now</button>
-                </form>
-            </div>
-            <div id="deck-form-success" style="display: none; text-align: center;">
-                <i class="fas fa-check-circle" style="font-size: 3rem; color: #4db6ac; margin-bottom: 1rem;" aria-hidden="true"></i>
-                <h3>Thank You!</h3>
-                <p>Your download should start automatically. If it doesn't, please check your pop-up blocker or try again.</p>
-            </div>
-        </div>
-    </div>
     
+    <!-- Mobile Sticky Bar -->
     <div id="mobile-sticky-bar">
         <a href="booth-registration.html" class="mobile-cta-btn"><i class="fas fa-chalkboard-user"></i><span>Exhibitor</span></a>
         <a href="sponsorship-registration.html" class="mobile-cta-btn"><i class="fas fa-star"></i><span>Sponsor</span></a>
