--- a/sponsorship-registration.html
+++ b/sponsorship-registration.html
@@ -1,10 +1,23 @@
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sponsorship Registration - QELE 2026</title>
+    <meta name="description" content="Sponsor the leading education exhibition in the Gulf. Submit your sponsorship inquiry for Qatar Education Expo 2026 and connect with decision-makers in the MENA education market.">
+    <title>Become a Sponsor | Qatar Education Expo 2026 Sponsorship</title>
+    <link rel="canonical" href="https://eduexpoqatar.com/sponsorship-registration.html" />
+    <link rel="alternate" hreflang="en" href="https://eduexpoqatar.com/sponsorship-registration.html" />
+    <link rel="alternate" hreflang="en-QA" href="https://eduexpoqatar.com/sponsorship-registration.html" />
+    <link rel="alternate" hreflang="en-SA" href="https://eduexpoqatar.com/sponsorship-registration.html" />
+    <link rel="alternate" hreflang="en-AE" href="https://eduexpoqatar.com/sponsorship-registration.html" />
+    <link rel="alternate" hreflang="en-KW" href="https://eduexpoqatar.com/sponsorship-registration.html" />
+    <link rel="alternate" hreflang="en-BH" href="https://eduexpoqatar.com/sponsorship-registration.html" />
+    <link rel="alternate" hreflang="en-OM" href="https://eduexpoqatar.com/sponsorship-registration.html" />
+    <link rel="alternate" hreflang="en-GB" href="https://eduexpoqatar.com/sponsorship-registration.html" />
+    <link rel="alternate" hreflang="en-CA" href="https://eduexpoqatar.com/sponsorship-registration.html" />
+    <link rel="alternate" hreflang="en-US" href="https://eduexpoqatar.com/sponsorship-registration.html" />
+    <link rel="alternate" hreflang="x-default" href="https://eduexpoqatar.com/sponsorship-registration.html" />
     <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,12 +30,53 @@
   }
 }
 </script>
+    <script type="application/ld+json">
+    [
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "Qatar Education Expo 2026",
+        "url": "/index.html",
+        "logo": "https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.png",
+        "sameAs": [
+          "https://twitter.com/qatarexpo2026",
+          "https://linkedin.com/company/qatarexpo2026",
+          "https://instagram.com/qatarexpo2026"
+        ],
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "telephone": "+974-7444-9111",
+          "contactType": "Customer Service",
+          "email": "partnerships@eduexpoqatar.com"
+        }
+      },
+      {
+        "@context": "https://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [{
+          "@type": "ListItem",
+          "position": 1,
+          "name": "Home",
+          "item": "/index.html"
+        },{
+          "@type": "ListItem",
+          "position": 2,
+          "name": "For Sponsors",
+          "item": "/sponsorship-tiers.html"
+        },{
+          "@type": "ListItem",
+          "position": 3,
+          "name": "Become a Sponsor"
+        }]
+      }
+    ]
+    </script>
 </head>
 <body>
 
     <header class="main-header" id="main-header">
         <div class="container">
-            <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.png" alt="QELE 2026 Logo"></a>
+            <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.png" alt="EduExpo Qatar 2026 Logo"></a>
             <button class="nav-toggle" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="hamburger-box">
                     <span class="hamburger-inner"></span>
@@ -76,7 +130,7 @@
     <main>
         <section class="page-header">
             <div class="container">
-                <h1>Sponsorship Registration</h1>
+                <h1>Become a Sponsor</h1>
                 <p>Align Your Brand with Excellence and Innovation.</p>
             </div>
         </section>
@@ -97,14 +151,14 @@
                     <input type="hidden" name="form_source" value="Sponsorship Inquiry">
 
                     <div class="form-group">
-                        <label for="form-sponsor-name"><span lang="en">Full Name</span> - <span lang="ar">الاسم الكامل</span> *</label>
+                        <label for="form-sponsor-name">Full Name *</label>
                         <input type="text" id="form-sponsor-name" name="name" required>
                         <div class="error-message"></div>
                     </div>
 
                     <div class="form-row">
                         <div class="form-group">
-                            <label for="form-sponsor-country"><span lang="en">Country</span> - <span lang="ar">الدولة</span> *</label>
+                            <label for="form-sponsor-country">Country *</label>
                             <select id="form-sponsor-country" name="country" required>
                                 <option value="" disabled selected>Select country</option>
                                 <option value="Qatar">Qatar</option>
@@ -120,7 +174,7 @@
                             <div class="error-message"></div>
                         </div>
                         <div class="form-group">
-                            <label for="form-sponsor-phone"><span lang="en">Mobile number</span> - <span lang="ar">رقم الجوال</span> *</label>
+                            <label for="form-sponsor-phone">Mobile Number *</label>
                             <input type="tel" id="form-sponsor-phone" name="phone" required>
                             <div class="error-message"></div>
                         </div>
@@ -128,7 +182,7 @@
 
                     <div class="form-row">
                         <div class="form-group">
-                            <label for="form-sponsor-email"><span lang="en">Email</span> - <span lang="ar">البريد الالكتروني</span> *</label>
+                            <label for="form-sponsor-email">Email *</label>
                             <input type="email" id="form-sponsor-email" name="email" required>
                             <div class="error-message"></div>
                         </div>
@@ -141,19 +195,19 @@
 
                     <div class="form-row">
                         <div class="form-group">
-                            <label for="form-sponsor-company"><span lang="en">Company</span> - <span lang="ar">الشركة</span> *</label>
+                            <label for="form-sponsor-company">Company *</label>
                             <input type="text" id="form-sponsor-company" name="company" required>
                             <div class="error-message"></div>
                         </div>
                         <div class="form-group">
-                            <label for="form-sponsor-title"><span lang="en">Position</span> - <span lang="ar">المنصب</span> *</label>
+                            <label for="form-sponsor-title">Position *</label>
                             <input type="text" id="form-sponsor-title" name="job_title" required>
                             <div class="error-message"></div>
                         </div>
                     </div>
 
                     <div class="form-group">
-                        <label for="form-sponsor-company-field"><span lang="en">Company field</span> - <span lang="ar">مجال الشركة</span> *</label>
+                        <label for="form-sponsor-company-field">Company Field *</label>
                         <select id="form-sponsor-company-field" name="company_field" required>
                             <option value="" disabled selected>Please select an option</option>
                             <option value="Education Institution">Education Institution</option>
@@ -173,7 +227,7 @@
                     
                     <div class="form-group form-group-consent">
                         <input type="checkbox" id="form-sponsor-consent" name="consent" required>
-                        <label for="form-sponsor-consent">I have read the sponsorship information and agree to be contacted by the QELE partnership team. *</label>
+                        <label for="form-sponsor-consent">I have read the sponsorship information and agree to be contacted by the EduExpo Qatar partnership team. *</label>
                         <div class="error-message"></div>
                     </div>
                     
@@ -181,14 +235,14 @@
                 </form>
             </div>
         </section>
-        <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762094160/Untitled_design_-_2025-11-02T200537.194_jcatwi.png" alt="QELE's owl mascot pointing to the sponsorship registration form." class="sponsorship-reg-mascot">
+        <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762094160/Untitled_design_-_2025-11-02T200537.194_jcatwi.png" alt="EduExpo Qatar's owl mascot pointing to the sponsorship registration form." class="sponsorship-reg-mascot">
     </main>
 
     <footer class="main-footer">
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-col">
-                    <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761223357/logo-white_1_pqcaph.png" alt="QELE 2026 Logo"></a>
+                    <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761223357/logo-white_1_pqcaph.png" alt="EduExpo Qatar 2026 Logo"></a>
                     <p>The premier event connecting educational leaders, institutions, and innovators in the MENA region.</p>
                 </div>
                 <div class="footer-col">
@@ -233,7 +287,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 QELE. All Rights Reserved.</p>
+                <p>&copy; 2024 EduExpo Qatar. All Rights Reserved.</p>
             </div>
         </div>
     </footer>
