--- a/why-attend.html
+++ b/why-attend.html
@@ -1,12 +1,23 @@
 
-
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Attend the top university fair and education exhibition in Qatar. Meet universities, explore study abroad options, and get career guidance at this unmissable admission fair.">
     <title>Why Attend Qatar's International University Fair | EduExpo Qatar 2026</title>
+    <link rel="canonical" href="https://eduexpoqatar.com/why-attend.html" />
+    <link rel="alternate" hreflang="en" href="https://eduexpoqatar.com/why-attend.html" />
+    <link rel="alternate" hreflang="en-QA" href="https://eduexpoqatar.com/why-attend.html" />
+    <link rel="alternate" hreflang="en-SA" href="https://eduexpoqatar.com/why-attend.html" />
+    <link rel="alternate" hreflang="en-AE" href="https://eduexpoqatar.com/why-attend.html" />
+    <link rel="alternate" hreflang="en-KW" href="https://eduexpoqatar.com/why-attend.html" />
+    <link rel="alternate" hreflang="en-BH" href="https://eduexpoqatar.com/why-attend.html" />
+    <link rel="alternate" hreflang="en-OM" href="https://eduexpoqatar.com/why-attend.html" />
+    <link rel="alternate" hreflang="en-GB" href="https://eduexpoqatar.com/why-attend.html" />
+    <link rel="alternate" hreflang="en-CA" href="https://eduexpoqatar.com/why-attend.html" />
+    <link rel="alternate" hreflang="en-US" href="https://eduexpoqatar.com/why-attend.html" />
+    <link rel="alternate" hreflang="x-default" href="https://eduexpoqatar.com/why-attend.html" />
     <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
