--- a/career-counselling.html
+++ b/career-counselling.html
@@ -2,6 +2,15 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7VMH5W3FET"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-7VMH5W3FET');
+</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Get expert guidance to study abroad at our global education expo. We offer specialized advice for students looking to study in the UK, study in Canada, and other top destinations from Qatar at this premier international education fair.">
@@ -30,7 +39,7 @@
         "@type": "Organization",
         "name": "Qatar Education Expo 2026",
         "url": "/index.html",
-        "logo": "https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.png",
+        "logo": "https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761210698/logo500x250_i8opbv.webp",
         "sameAs": [
           "https://twitter.com/qatarexpo2026",
           "https://linkedin.com/company/qatarexpo2026",
@@ -64,12 +73,19 @@
       }
     ]
     </script>
+    <script type="text/javascript">
+        (function(c,l,a,r,i,t,y){
+            c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+            t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+            y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+        })(window, document, "clarity", "script", "u1z7soldc8");
+    </script>
 </head>
 <body>
 
     <header class="main-header" id="main-header">
         <div class="container">
-            <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.png" alt="Qatar Education Expo 2026 Logo"></a>
+            <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761210698/logo500x250_i8opbv.webp" alt="Qatar Education Expo 2026 Logo"></a>
             <button class="nav-toggle" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="hamburger-box">
                     <span class="hamburger-inner"></span>
@@ -80,15 +96,16 @@
                     <li><a href="index.html" class="nav-link">Home</a></li>
                     <li><a href="about.html" class="nav-link">About Expo</a></li>
                     <li class="has-dropdown">
-                        <a href="#" class="nav-link">Visit <i class="fas fa-angle-down"></i></a>
+                        <a href="why-attend.html" class="nav-link">Visit <i class="fas fa-angle-down"></i></a>
                         <ul class="dropdown-menu">
                             <li><a href="why-attend.html">Why Attend</a></li>
                             <li><a href="plan-your-trip.html">Plan Your Trip</a></li>
+                            <li><a href="school-group-registration.html">School Group Registration</a></li>
                             <li><a href="workshops.html">Agenda</a></li>
                         </ul>
                     </li>
                     <li class="has-dropdown">
-                        <a href="#" class="nav-link">For Students <i class="fas fa-angle-down"></i></a>
+                        <a href="student-registration.html" class="nav-link">For Students <i class="fas fa-angle-down"></i></a>
                         <ul class="dropdown-menu">
                             <li><a href="student-registration.html">Student Registration</a></li>
                             <li><a href="career-counselling.html">Career Counselling</a></li>
@@ -122,7 +139,7 @@
     </header>
 
     <main>
-        <section id="hero" style="background-image: url('https://images.pexels.com/photos/3184418/pexels-photo-3184418.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2'); padding: 80px 0;">
+        <section id="hero" style="background-image: url('https://images.pexels.com/photos/3184418/pexels-photo-3184418.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2&fm=webp'); padding: 80px 0;">
             <div class="container hero-content">
                 <div class="hero-text">
                     <h1>Expert Guidance to Study Abroad</h1>
@@ -208,7 +225,7 @@
                 <p class="subtitle">Our team consists of certified professionals with years of experience in guiding students to top universities worldwide.</p>
                 <div class="speakers-grid">
                     <div class="speaker-card">
-                        <img src="https://images.pexels.com/photos/4101143/pexels-photo-4101143.jpeg?auto=compress&cs=tinysrgb&w=400" alt="Headshot of Dr. Aisha Al-Marri" class="speaker-photo">
+                        <img src="https://images.pexels.com/photos/4101143/pexels-photo-4101143.jpeg?auto=compress&cs=tinysrgb&w=400&fm=webp" alt="Headshot of Dr. Aisha Al-Marri" class="speaker-photo">
                         <div class="speaker-info">
                             <h4>Dr. Aisha Al-Marri</h4>
                             <p class="speaker-title">Lead Career Counsellor</p>
@@ -217,7 +234,7 @@
                         <span class="speaker-tag">15+ Years of Experience</span>
                     </div>
                     <div class="speaker-card">
-                        <img src="https://images.pexels.com/photos/5439472/pexels-photo-5439472.jpeg?auto=compress&cs=tinysrgb&w=400" alt="Headshot of Johnathan Evans" class="speaker-photo">
+                        <img src="https://images.pexels.com/photos/5439472/pexels-photo-5439472.jpeg?auto=compress&cs=tinysrgb&w=400&fm=webp" alt="Headshot of Johnathan Evans" class="speaker-photo">
                         <div class="speaker-info">
                             <h4>Johnathan Evans</h4>
                             <p class="speaker-title">University Admissions Expert</p>
@@ -226,7 +243,7 @@
                         <span class="speaker-tag">UK & US University Specialist</span>
                     </div>
                     <div class="speaker-card">
-                        <img src="https://images.pexels.com/photos/8843255/pexels-photo-8843255.jpeg?auto=compress&cs=tinysrgb&w=400" alt="Headshot of Fatima Khan" class="speaker-photo">
+                        <img src="https://images.pexels.com/photos/8843255/pexels-photo-8843255.jpeg?auto=compress&cs=tinysrgb&w=400&fm=webp" alt="Headshot of Fatima Khan" class="speaker-photo">
                         <div class="speaker-info">
                             <h4>Fatima Khan</h4>
                             <p class="speaker-title">Psychometric Analyst</p>
@@ -289,7 +306,7 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-col">
-                    <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761223357/logo-white_1_pqcaph.png" alt="Qatar Education Expo 2026 Logo"></a>
+                    <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761223357/logo-white_1_pqcaph.webp" alt="Qatar Education Expo 2026 Logo"></a>
                     <p>The premier event connecting educational leaders, institutions, and innovators in the MENA region.</p>
                 </div>
                 <div class="footer-col">
